# tinywm

./: Makefile.am  README.md  config.h.in  configure.ac  dynamic-backend-switch.md  index.html  params.json  wayland.source
bindings/: README.md
bindings/gtk/: README.md
bindings/qt/: README.md
doc/: X11CompositeTutorial.htm
libtinywm/: tinywm-version.h.in  tinywm.c  tinywm.h  tinywm.pc.in
libtinywm/directfb/: README.md
libtinywm/wayland/: README.md
libtinywm/x11/: README.md
